get example 2.5 outputting a vocabulary in json.

--- a/htrain.cabal
+++ b/htrain.cabal
@@ -50,9 +50,12 @@ executable trainLLM
 
     build-depends:
         base <5.0,
+        aeson,
+        optparse-applicative -any,
         split,
         Unique,
-        optparse-applicative -any
+        vector
+
 
 test-suite test-htrain
     type:               exitcode-stdio-1.0
