make example 2.5.1 read a Vocabulary.

--- a/htrain.cabal
+++ b/htrain.cabal
@@ -51,9 +51,12 @@ executable trainLLM
     build-depends:
         base <5.0,
         aeson,
+        bytestring,
         optparse-applicative -any,
+        scientific,
         split,
         Unique,
+        unordered-containers,
         vector
 
 
