move from our own type based on list, to an InsOrdHashMap.

--- a/htrain.cabal
+++ b/htrain.cabal
@@ -53,6 +53,7 @@ executable trainLLM
         aeson,
         minbpe-hs,
         bytestring,
+        insert-ordered-containers,
         optparse-applicative -any,
         scientific,
         split,
