make example 2_5_1 output correctly.

--- a/htrain.cabal
+++ b/htrain.cabal
@@ -53,6 +53,7 @@ executable trainLLM
         aeson,
         minbpe-hs,
         bytestring,
+        extra,
         insert-ordered-containers,
         optparse-applicative -any,
         scientific,
