add a sanity check, and clear up some debugging messages and comments.

--- a/htrain.cabal
+++ b/htrain.cabal
@@ -53,6 +53,7 @@ executable trainLLM
         aeson,
         minbpe-hs,
         bytestring,
+        bytestring-conversion,
         extra,
         insert-ordered-containers,
         optparse-applicative -any,
