use Repa to re-implement much of section 2.7.

--- a/htrain.cabal
+++ b/htrain.cabal
@@ -58,6 +58,7 @@ executable trainLLM
         insert-ordered-containers,
         optparse-applicative -any,
         random,
+        repa,
         scientific,
         split,
         text,
